--- a/index.html
+++ b/index.html
@@ -11,5 +11,19 @@
 </head>
 <body>
 
+<!--Start Main Slider-->
+<div class="main-slider-outer">
+<!--nav area-->
+    <div class="nav-outer">
+        <div class="logo-outer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Wattpad_logo.png"
+                 alt="logo img">
+        </div>
+        <div class="nav-bar-context"></div>
+    </div>
+<!--nav area-->
+</div>
+<!--End Main Slider-->
+
 </body>
 </html>
