--- a/index.html
+++ b/index.html
@@ -13,15 +13,26 @@
 
 <!--Start Main Slider-->
 <div class="main-slider-outer">
-<!--nav area-->
+    <!--nav area-->
     <div class="nav-outer">
         <div class="logo-outer">
             <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Wattpad_logo.png"
                  alt="logo img">
         </div>
-        <div class="nav-bar-context"></div>
+        <div class="nav-bar-context">
+            <!--nav-->
+            <ul class="nav">
+                <li><span><a href="">Home</a></span></li>
+                <li><span><a href="">Room</a></span></li>
+                <li><span><a href="">News</a></span></li>
+                <li><span><a href="">Gallery</a></span></li>
+                <li><span><a href="">About</a></span></li>
+                <li><span><a href="">Contact</a></span></li>
+            </ul>
+            <!--nav-->
+        </div>
     </div>
-<!--nav area-->
+    <!--nav area-->
 </div>
 <!--End Main Slider-->
 
