--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         </div>
         <div class="nav-bar-context">
             <!--nav-->
+            <div class="search-wrapper">
+                <div class="search-type"></div>
+                <div class="search-icon"></div>
+            </div>
             <ul class="nav">
                 <li><span><a href="">Home</a></span></li>
                 <li><span><a href="">Room</a></span></li>
@@ -29,6 +33,7 @@
                 <li><span><a href="">About</a></span></li>
                 <li><span><a href="">Contact</a></span></li>
             </ul>
+            <button class="book-button">Book Now</button>
             <!--nav-->
         </div>
     </div>
