--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hotello | System</title>
 
+    <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -22,8 +23,16 @@
         <div class="nav-bar-context">
             <!--nav-->
             <div class="search-wrapper">
-                <div class="search-type"></div>
-                <div class="search-icon"></div>
+                <div class="search-type">
+                        <span>All</span>&nbsp;
+                        <span>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </span>
+                </div>
+                <input type="search" placeholder="Search here">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
             </div>
             <ul class="nav">
                 <li><span><a href="">Home</a></span></li>
