--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body style="height: 5000px">
+
+<div class="social-outer">
+
+</div>
 
 <!--Start Main Slider-->
 <div class="main-slider-outer">
