--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body style="height: 5000px">
-
+<!--Social area-->
 <div class="social-outer">
-
+    <div class="social-inner-wrap">
+        <div class="slide-context"></div>
+    </div>
+    <div class="social-inner-wrap"></div>
+    <div class="social-inner-wrap"></div>
+    <div class="social-inner-wrap"></div>
 </div>
+<!--Social area-->
 
 <!--Start Main Slider-->
 <div class="main-slider-outer">
