--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 </div>
             </div>
             <ul class="nav">
-                <li><span><a href="">Home</a></span></li>
-                <li><span><a href="">Room</a></span></li>
-                <li><span><a href="">News</a></span></li>
-                <li><span><a href="">Gallery</a></span></li>
-                <li><span><a href="">About</a></span></li>
+                <li><span><a href="">Home</a></span><div class="line"></div></li>
+                <li><span><a href="">Room</a></span><div class="line"></div></li>
+                <li><span><a href="">News</a></span><div class="line"></div></li>
+                <li><span><a href="">Gallery</a></span><div class="line"></div></li>
+                <li><span><a href="">About</a></span><div class="line"></div></li>
                 <li><span><a href="">Contact</a></span></li>
             </ul>
             <button class="book-button">Book Now</button>
