--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
 <!--Social area-->
 <div class="social-outer">
     <div class="social-inner-wrap">
-        <div class="slide-context"></div>
+        <div class="social-logo"><i class="fa-brands fa-youtube"></i></div>
+        <div class="slide-context">
+            Youtube
+        </div>
     </div>
-    <div class="social-inner-wrap"></div>
-    <div class="social-inner-wrap"></div>
-    <div class="social-inner-wrap"></div>
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-facebook-f"></i></div>
+        <div class="slide-context">
+            Facebook
+        </div>
+    </div>
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-twitter"></i></div>
+        <div class="slide-context">
+            Twitter
+        </div>
+    </div>
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-linkedin-in"></i></div>
+        <div class="slide-context">
+            Linkedin
+        </div>
+    </div>
 </div>
 <!--Social area-->
 
