--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <!--nav-->
             <div class="search-wrapper">
                 <div class="search-type">
-                        <span>All</span>&nbsp;
-                        <span>
+                    <span>All</span>&nbsp;
+                    <span>
                             <i class="fa-solid fa-angle-down"></i>
                         </span>
                 </div>
@@ -63,11 +63,21 @@
                 </div>
             </div>
             <ul class="nav">
-                <li><span><a href="">Home</a></span><div class="line"></div></li>
-                <li><span><a href="">Room</a></span><div class="line"></div></li>
-                <li><span><a href="">News</a></span><div class="line"></div></li>
-                <li><span><a href="">Gallery</a></span><div class="line"></div></li>
-                <li><span><a href="">About</a></span><div class="line"></div></li>
+                <li><span><a href="">Home</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">Room</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">News</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">Gallery</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">About</a></span>
+                    <div class="line"></div>
+                </li>
                 <li><span><a href="">Contact</a></span></li>
             </ul>
             <button class="book-button">Book Now</button>
@@ -75,6 +85,12 @@
         </div>
     </div>
     <!--nav area-->
+    <!--slider-middle-text-->
+    <div class="middle-text-outer">
+        <h1 class="book-today-text">Book Today</h1>
+        <h2 class="weekend-offer-text">HOT WEEKEND OFFER</h2>
+    </div>
+    <!--slider-middle-text-->
 </div>
 <!--End Main Slider-->
 
