--- a/index.html
+++ b/index.html
@@ -91,6 +91,40 @@
         <h2 class="weekend-offer-text">HOT WEEKEND OFFER</h2>
     </div>
     <!--slider-middle-text-->
+    <!--booking-widget-->
+    <div class="widget-main-outer">
+        <div class="widget-inner">
+            <div class="widget-components-wrapper">
+                <input type="date">
+            </div>
+            <div class="widget-components-wrapper">
+                <select>
+                    <option value="#" disabled selected>Guests</option>
+                    <option value="#">1</option>
+                    <option value="#">2</option>
+                    <option value="#">3</option>
+                    <option value="#">4</option>
+                    <option value="#">5</option>
+                    <option value="#">6</option>
+                </select>
+            </div>
+            <div class="widget-components-wrapper">
+                <select>
+                    <option value="#" disabled selected>Children</option>
+                    <option value="#">1</option>
+                    <option value="#">2</option>
+                    <option value="#">3</option>
+                    <option value="#">4</option>
+                    <option value="#">5</option>
+                    <option value="#">6</option>
+                </select>
+            </div>
+            <div class="widget-components-wrapper">
+                <input type="submit" value="Check Rates">
+            </div>
+        </div>
+    </div>
+    <!--booking-widget-->
 </div>
 <!--End Main Slider-->
 
