--- a/index.html
+++ b/index.html
@@ -128,5 +128,49 @@
 </div>
 <!--End Main Slider-->
 
+<!--about-outer-->
+<div class="about-wrapper">
+    <div class="about-inner">
+        <div class="about-text-outer">
+            <h1 class="welcome-text">
+                Welcome
+            </h1>
+            <h1 class="enjoy-text">Enjoy Your Stay <br>
+                in Our Hotel</h1>
+        </div>
+
+    </div>
+    <div class="about-inner">
+        <p>
+            Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        </p>
+    </div>
+    <div class="about-inner">
+        <p>
+            Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua.
+        </p>
+    </div>
+</div>
+<!--about-outer-->
+
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/633dad3354f06e12d89897da/1gekep4hh';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
+
 </body>
 </html>
