--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
 </div>
 <!--about-outer-->
 
+<!--Services area-->
+<div class="service-main-outer">
+    <div class="service-inner"></div>
+    <div class="service-inner"></div>
+    <div class="service-inner"></div>
+    <div class="service-inner"></div>
+</div>
+<!--Services area-->
+
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
