--- a/index.html
+++ b/index.html
@@ -159,10 +159,26 @@
 
 <!--Services area-->
 <div class="service-main-outer">
-    <div class="service-inner"></div>
-    <div class="service-inner"></div>
-    <div class="service-inner"></div>
-    <div class="service-inner"></div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+
+        </div>
+    </div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+
+        </div>
+    </div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+
+        </div>
+    </div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+
+        </div>
+    </div>
 </div>
 <!--Services area-->
 
