--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hotello | System</title>
+    <link rel="icon"
+          type="image/x-icon"
+          href="favicon.png">
 
     <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
@@ -162,27 +165,71 @@
     <div class="service-inner">
         <div class="shadow-wrapper">
             <div class="show-wrapper">
-
+                <p>
+                    <i class="fa-regular fa-briefcase"></i>
+                </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
             </div>
-            <div class="hidden-wrapper"></div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos ducimus eligendi ipsa
+                    laboriosam nihil quibusdam ratione? Accusantium, quibusdam temporibus.
+                </p>
+            </div>
         </div>
     </div>
     <div class="service-inner">
         <div class="shadow-wrapper">
-            <div class="show-wrapper"></div>
-            <div class="hidden-wrapper"></div>
+            <div class="show-wrapper">
+                <p><i class="fa-solid fa-mug-saucer"></i></p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
+            </div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos ducimus eligendi ipsa
+                    laboriosam nihil quibusdam ratione? Accusantium, quibusdam temporibus.
+                </p>
+            </div>
         </div>
     </div>
     <div class="service-inner">
         <div class="shadow-wrapper">
-            <div class="show-wrapper"></div>
-            <div class="hidden-wrapper"></div>
+            <div class="show-wrapper">
+                <p>
+                    <i class="fa-solid fa-vault"></i>
+                </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
+            </div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos ducimus eligendi ipsa
+                    laboriosam nihil quibusdam ratione? Accusantium, quibusdam temporibus.
+                </p>
+            </div>
         </div>
     </div>
     <div class="service-inner">
         <div class="shadow-wrapper">
-            <div class="show-wrapper"></div>
-            <div class="hidden-wrapper"></div>
+            <div class="show-wrapper">
+                <p>
+                    <i class="fa-solid fa-socks"></i>
+                </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
+            </div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos ducimus eligendi ipsa
+                    laboriosam nihil quibusdam ratione? Accusantium, quibusdam temporibus.
+                </p>
+            </div>
         </div>
     </div>
 </div>
