--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
 </head>
-<body style="height: 5000px">
+<body>
 <!--Social area-->
 <div class="social-outer">
     <div class="social-inner-wrap">
@@ -235,6 +235,15 @@
 </div>
 <!--Services area-->
 
+<!--blog area-->
+<div class="blog-outer">
+    <div class="blog-inner">
+        <div class="blog-items-wrapper"></div>
+        <div class="blog-items-wrapper"></div>
+        <div class="blog-items-wrapper"></div>
+    </div>
+</div>
+<!--blog area-->
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
