--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
 <!--Social area-->
@@ -238,12 +239,139 @@
 <!--blog area-->
 <div class="blog-outer">
     <div class="blog-inner">
-        <div class="blog-items-wrapper"></div>
-        <div class="blog-items-wrapper"></div>
-        <div class="blog-items-wrapper"></div>
+        <div class="blog-items-wrapper">
+            <div class="blog-items-img-wrap i1"></div>
+            <div class="blog-desc">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, consequatur dignissimos
+                    distinctio dolorem eaque error fugiat itaque minus modi nam neque nisi non odit perspiciatis quas
+                    soluta, velit! Dolorum maiores minima ratione tempore temporibus!
+                </p>
+            </div>
+        </div>
+        <div class="blog-items-wrapper">
+            <div class="blog-items-img-wrap i2"></div>
+            <div class="blog-desc">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, consequatur dignissimos
+                    distinctio dolorem eaque error fugiat itaque minus modi nam neque nisi non odit perspiciatis quas
+                    soluta, velit! Dolorum maiores minima ratione tempore temporibus!
+                </p>
+            </div>
+        </div>
+        <div class="blog-items-wrapper">
+            <div class="blog-items-img-wrap i3"></div>
+            <div class="blog-desc">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, consequatur dignissimos
+                    distinctio dolorem eaque error fugiat itaque minus modi nam neque nisi non odit perspiciatis quas
+                    soluta, velit! Dolorum maiores minima ratione tempore temporibus!
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 <!--blog area-->
+
+
+<footer>
+    <div class="container">
+        <div class="content">
+            ⁡⁢⁣⁣ ⁡
+            <div class="col">
+                <p>contact us</p>
+                <p>
+                    hi, we are always open for cooperation and suggestions, <br />
+                    contact us in one of the ways below:
+                </p>
+                <div class="flex">
+                    <div class="col-info">
+                        <p>
+                            PHONE NUMBER <br />
+                            <span>+1 (800) 060-07-30</span>
+                        </p>
+                        <p>
+                            OUR LOCATION <br />
+                            <span>715 Fake Street, New York<br />
+                10021 USA</span>
+                        </p>
+                    </div>
+                    <div class="col-info">
+                        <p>
+                            EMAIL ADDRESS <br />
+                            <span>us@example.com</span>
+                        </p>
+
+                        <p>
+                            WORKING HOURS <br />
+                            <span>Mon-sat 10:00pm - 7:00pm</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            ⁡⁢⁣⁡⁢⁣⁣ ⁡
+            <div class="col">
+                <div class="column">
+                    <p>information</p>
+                    <p>about us</p>
+                    <p>delivery information</p>
+                    <p>privacy policy</p>
+                    <p>brands</p>
+                    <p>contact us</p>
+                    <p>returns</p>
+                    <p>site map</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="column">
+                    <p>my account</p>
+                    <p>store location</p>
+                    <p>order history</p>
+                    <p>wish list</p>
+                    <p>newsletter</p>
+                    <p>special offers</p>
+                    <p>gift certificates</p>
+                    <p>affiliate</p>
+                </div>
+            </div>
+            ⁡⁢⁣⁣ ⁡
+            <div class="col">
+                <p>newsletter</p>
+                <p>
+                    enter your email address below to subscribe to our newsletter<br />
+                    and keep up to date with discounts and special offers.
+                </p>
+                <div class="email">
+                    <input type="email" placeholder="user@example.com" />
+                    <button>Subscribe</button>
+                </div>
+                <p>follow us on social networks:</p>
+                <div class="social">
+                    <img src="https://i.postimg.cc/44pPB9wk/facebook.png" alt="" />
+                    <img src="https://i.postimg.cc/L8Q3nB4f/twitter.png" alt="" />
+                    <img src="https://i.postimg.cc/TYG9S3Hy/instagram.png" alt="" />
+                    <img src="https://i.postimg.cc/kGCxkTwr/youtube.png" alt="" />
+                    <img src="https://i.postimg.cc/CKZHDBd2/telegram.png" alt="" />
+                </div>
+            </div>
+            ⁡⁢⁡⁢⁣⁣
+        </div>
+    </div>
+    <div class="content-foot">
+        <div class="container">
+            <div class="foot-text">
+                <p>powered by <span>tech</span> - designed by <span>hema</span></p>
+                <div class="pay">
+                    <img src="https://i.postimg.cc/PrtWyFPY/visa-logo-png-2013.png" alt="" />
+                    <img src="https://i.postimg.cc/R0j1TSHZ/mastercard-PNG23.png" alt="" />
+                    <img src="https://i.postimg.cc/sggJj0zs/paypal-logo-png-2119.png" alt="" />
+                    <img src="https://i.postimg.cc/hjdsFzBm/American-Express-logo-PNG14.png" alt="" />
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
