--- a/index.html
+++ b/index.html
@@ -387,5 +387,9 @@
 </script>
 <!--End of Tawk.to Script-->
 
+<script>
+    alert("this application is not responsive..");
+</script>
+
 </body>
 </html>
